Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -138,7 +138,7 @@ nav {
 .widget {
     &.extendednavigation {
         float: right;
-        max-width: 65%;
+        width: 80%;
         @media @tablet {
             float: none;
             max-width: 100%;
